third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/no-close-5.stderr
TOML parse error at line 1, column 11
  |
1 | [fwfw.wafw
  |           ^
invalid table header
expected `.`, `]`
